# EdgeViewer

./: README.md  settings.gradle.kts
Web/: index.html
Web/src/: index.ts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/edgeviewer1/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/edgeviewer1/: GLRendrer.kt  MainActivity.kt  NativeBridge.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/edgeviewer1/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
